# mcpsafe

./: .gitignore  LICENSE  README.md  mcpsafe-learning-guide.html  pyproject.toml  run-all-scans.bat  run-all-scans.ps1  simple_server.py
mcpsafe-reports/: mcpsafe-44fc85c1-20260412-220952.html  mcpsafe-44fc85c1-20260412-220952.json  mcpsafe-4ef32b93-20260412-221350.html  mcpsafe-4ef32b93-20260412-221350.json  mcpsafe-707750b3-20260412-220059.html  mcpsafe-707750b3-20260412-220059.json  mcpsafe-9a6cd5c9-20260412-215949.html  mcpsafe-9a6cd5c9-20260412-215949.json  mcpsafe-aa28889b-20260412-220555.html  mcpsafe-aa28889b-20260412-220555.json  mcpsafe-aa9a726b-20260412-220328.html  mcpsafe-aa9a726b-20260412-220328.json  mcpsafe-bfc48578-20260412-220049.html  mcpsafe-bfc48578-20260412-220049.json  mcpsafe-docs-mcp-cloudflare-com-3d193b32-20260414-132816.html  mcpsafe-docs-mcp-cloudflare-com-3d193b32-20260414-132816.json  mcpsafe-docs-mcp-cloudflare-com-3d193b32-20260414-132816.sarif  mcpsafe-docs-mcp-cloudflare-com-51b8b147-20260415-095321.html  mcpsafe-docs-mcp-cloudflare-com-51b8b147-20260415-095321.json  mcpsafe-docs-mcp-cloudflare-com-51b8b147-20260415-095321.sarif  mcpsafe-docs-mcp-cloudflare-com-e4f43093-20260413-174723.html  mcpsafe-docs-mcp-cloudflare-com-e4f43093-20260413-174723.json  mcpsafe-docs-mcp-cloudflare-com-e4f43093-20260413-174723.sarif  mcpsafe-fetch-287cbfa2-20260414-131346.html  mcpsafe-fetch-287cbfa2-20260414-131346.json  mcpsafe-fetch-287cbfa2-20260414-131346.sarif  mcpsafe-fetch-43707507-20260415-094623.html  mcpsafe-fetch-43707507-20260415-094623.json  mcpsafe-fetch-43707507-20260415-094623.sarif  mcpsafe-fetch-b6bfc04f-20260413-174317.html  mcpsafe-fetch-b6bfc04f-20260413-174317.json  mcpsafe-fetch-b6bfc04f-20260413-174317.sarif  mcpsafe-git-1e76d1c1-20260414-131449.html  (+101 more)
(+48 files in other folders)
